Adjust html for the hover animation

--- a/SubPages/french.html
+++ b/SubPages/french.html
@@ -11,109 +11,149 @@
     <link rel="stylesheet" href="../css/style.css">
 </head>
 <body>
-    <header class="header">
-        <h1 id="title">ohmyfood</h1>
-        <a href="../index.html"><i class="fa-solid fa-arrow-left"></i></a>
-    </header>
-    <div class="presentation__img"></div>
-    <main class="detail" >
-        <div class="detail__title">
-            <h2>À la française</h2>
-            <i class=" fa-regular fa-heart"></i>
-        </div>
-        <section class="content--padding--soft">
-            <article class="menu">
-                <h3>ENTRÉES</h3>
-                <div class="menu__card">
-                    <div class="menu__card__cont">
-                        <p class="menu__card__cont__title">Tartare de poulpe acidulé</p>
-                        <div class="menu__card__cont__infos">
-                            <p>Au zeste d'orange</p>
-                            <div>25€</div>
-                        </div>
-                    </div>
-                    <div class="menu__card__validate">
-                        <i class="fa-solid fa-check"></i>
+<header class="header">
+    <h1 id="title">ohmyfood</h1>
+    <a href="../index.html"><i class="fa-solid fa-arrow-left"></i></a>
+</header>
+<div class="presentation__img"></div>
+<main class="detail">
+    <div class="detail__title">
+        <h2>À la française</h2>
+        <i class=" fa-regular fa-heart"></i>
+    </div>
+    <section class="content--padding--soft">
+        <article class="menu">
+            <h3>ENTRÉES</h3>
+            <div class="menu__card">
+                <div class="menu__card__cont">
+                    <p class="menu__card__cont__title">Tartare de poulpe acidulé</p>
+                    <div class="menu__card__cont__infos">
+                        <p>Au zeste d'orange</p>
+                        <div>25€</div>
                     </div>
                 </div>
-                <div class="menu__card">
-                    <p class="menu__card__title">Velouté de légumes d'antan</p>
-                    <div class="menu__card__infos">
+                <div class="menu__card__validate">
+                    <i class="fa-solid fa-check"></i>
+                </div>
+            </div>
+            <div class="menu__card">
+                <div class="menu__card__cont">
+                    <p class="menu__card__cont__title">Velouté de légumes d'antan</p>
+                    <div class="menu__card__cont__infos">
                         <p>Carotte, panais, topinambour</p>
                         <div>35€</div>
                     </div>
                 </div>
-                <div class="menu__card">
-                    <p class="menu__card__title">Soupe à l'oignon</p>
-                    <div class="menu__card__infos">
+                <div class="menu__card__validate">
+                    <i class="fa-solid fa-check"></i>
+                </div>
+            </div>
+            <div class="menu__card">
+                <div class="menu__card__cont">
+                    <p class="menu__card__cont__title">Soupe à l'oignon</p>
+                    <div class="menu__card__cont__infos">
                         <p>Revisitée</p>
                         <div>20€</div>
                     </div>
                 </div>
-            </article>
-        </section>
-        <section class="content--padding--soft background--color">
-            <article class="menu">
-                <h3>PLATS</h3>
-                <div class="menu__card">
-                    <p class="menu__card__title">Coquilles Saint-Jacques</p>
-                    <div class="menu__card__infos">
+                <div class="menu__card__validate">
+                    <i class="fa-solid fa-check"></i>
+                </div>
+            </div>
+        </article>
+    </section>
+    <section class="content--padding--soft background--color">
+        <article class="menu">
+            <h3>PLATS</h3>
+            <div class="menu__card">
+                <div class="menu__card__cont">
+                    <p class="menu__card__cont__title">Coquilles Saint-Jacques</p>
+                    <div class="menu__card__cont__infos">
                         <p>Accompagnées d'une purée de panais</p>
                         <div>40€</div>
                     </div>
                 </div>
-                <div class="menu__card">
-                    <p class="menu__card__title">Magret de canard</p>
-                    <div class="menu__card__infos">
+                <div class="menu__card__validate">
+                    <i class="fa-solid fa-check"></i>
+                </div>
+            </div>
+            <div class="menu__card">
+                <div class="menu__card__cont">
+                    <p class="menu__card__cont__title">Magret de canard</p>
+                    <div class="menu__card__cont__infos">
                         <p>Et parmentier de pommes de terres</p>
                         <div>35€</div>
                     </div>
                 </div>
-                <div class="menu__card">
-                    <p class="menu__card__title">Pigeonneau d'Ille-et-Villaine</p>
-                    <div class="menu__card__infos">
+                <div class="menu__card__validate">
+                    <i class="fa-solid fa-check"></i>
+                </div>
+            </div>
+            <div class="menu__card">
+                <div class="menu__card__cont">
+                    <p class="menu__card__cont__title">Pigeonneau d'Ille-et-Villaine</p>
+                    <div class="menu__card__cont__infos">
                         <p>Sur son lit de gnocchis aux légumes</p>
                         <div>44€</div>
                     </div>
                 </div>
-            </article>
-        </section>
-        <section class="content--padding--soft background--color">
-            <article class="menu">
-                <h3>DESSERTS</h3>
-                <div class="menu__card">
-                    <p class="menu__card__title">Pétales de violletes glacés</p>
-                    <div class="menu__card__infos">
+                <div class="menu__card__validate">
+                    <i class="fa-solid fa-check"></i>
+                </div>
+            </div>
+        </article>
+    </section>
+    <section class="content--padding--soft background--color">
+        <article class="menu">
+            <h3>DESSERTS</h3>
+            <div class="menu__card">
+                <div class="menu__card__cont">
+                    <p class="menu__card__cont__title">Pétales de violletes glacés</p>
+                    <div class="menu__card__cont__infos">
                         <p>Et purée de noisettes</p>
                         <div>18€</div>
                     </div>
                 </div>
-                <div class="menu__card">
-                    <p class="menu__card__title">Fondant au chocolat</p>
-                    <div class="menu__card__infos">
+                <div class="menu__card__validate">
+                    <i class="fa-solid fa-check"></i>
+                </div>
+            </div>
+            <div class="menu__card">
+                <div class="menu__card__cont">
+                    <p class="menu__card__cont__title">Fondant au chocolat</p>
+                    <div class="menu__card__cont__infos">
                         <p>Revisité</p>
                         <div>22€</div>
                     </div>
                 </div>
-                <div class="menu__card">
-                    <p class="menu__card__title">Millefeuille croustillant</p>
-                    <div class="menu__card__infos">
+                <div class="menu__card__validate">
+                    <i class="fa-solid fa-check"></i>
+                </div>
+            </div>
+            <div class="menu__card">
+                <div class="menu__card__cont">
+                    <p class="menu__card__cont__title">Millefeuille croustillant</p>
+                    <div class="menu__card__cont__infos">
                         <p>Myrtilles et pâte d'amande</p>
                         <div>23€</div>
                     </div>
                 </div>
-            </article>
-        </section>
-        <button class="btn ">Commander</button>
-    </main>
-    <footer class="footer">
-        <p class="footer__title"><a href="#title" >ohmyfood</a></p>
-        <ul class="footer__list">
-            <li class="footer__list__item"><i class="fa-solid fa-utensils"></i>Proposer un restaurant</li>
-            <li class="footer__list__item"><i class="fa-solid fa-handshake-angle"></i>Devenir partenaire</li>
-            <li class="footer__list__item footer__list__item--lighter">Mentions légales</li>
-            <li class="footer__list__item footer__list__item--lighter">Contact</li>
-        </ul>
-    </footer>
+                <div class="menu__card__validate">
+                    <i class="fa-solid fa-check"></i>
+                </div>
+            </div>
+        </article>
+    </section>
+    <button class="btn ">Commander</button>
+</main>
+<footer class="footer">
+    <p class="footer__title"><a href="#title">ohmyfood</a></p>
+    <ul class="footer__list">
+        <li class="footer__list__item"><i class="fa-solid fa-utensils"></i>Proposer un restaurant</li>
+        <li class="footer__list__item"><i class="fa-solid fa-handshake-angle"></i>Devenir partenaire</li>
+        <li class="footer__list__item footer__list__item--lighter">Mentions légales</li>
+        <li class="footer__list__item footer__list__item--lighter">Contact</li>
+    </ul>
+</footer>
 </body>
 </html>
