--- a/SubPages/note.html
+++ b/SubPages/note.html
@@ -25,32 +25,56 @@
             <article class="menu">
                 <h3>ENTRÉES</h3>
                 <div class="menu__card">
-                    <p class="menu__card__title">Ravioles de foie gras</p>
-                    <div class="menu__card__infos">
-                        <p>Accompagnés de leur crème à la truffe</p>
-                        <div>25€</div>
+                        <div class="menu__card__cont">
+                            <p class="menu__card__cont__title">Ravioles de foie gras</p>
+                            <div class="menu__card__cont__infos">
+                                <p>Accompagnés de leur crème à la truffe</p>
+                                <div>25€</div>
+
+                        </div>
                     </div>
+                    <div class="menu__card__validate">
+                            <i class="fa-solid fa-check"></i>
+                        </div>
                 </div>
                 <div class="menu__card">
-                    <p class="menu__card__title">Caviar osciètre</p>
-                    <div class="menu__card__infos">
-                        <p>Sur blini à la farine de blé noir</p>
-                        <div>35€</div>
+                        <div class="menu__card__cont">
+                            <p class="menu__card__cont__title">Caviar osciètre</p>
+                            <div class="menu__card__cont__infos">
+                                <p>Sur blini à la farine de blé noir</p>
+                                <div>35€</div>
+
+                        </div>
                     </div>
+                    <div class="menu__card__validate">
+                            <i class="fa-solid fa-check"></i>
+                        </div>
                 </div>
                 <div class="menu__card">
-                    <p class="menu__card__title">Homard et espuma de comté</p>
-                    <div class="menu__card__infos">
-                        <p>Mariné aux zests d'orange</p>
-                        <div>20€</div>
+                        <div class="menu__card__cont">
+                            <p class="menu__card__cont__title">Homard et espuma de comté</p>
+                            <div class="menu__card__cont__infos">
+                                <p>Mariné aux zests d'orange</p>
+                                <div>20€</div>
+
+                        </div>
                     </div>
+                    <div class="menu__card__validate">
+                            <i class="fa-solid fa-check"></i>
+                        </div>
                 </div>
                 <div class="menu__card">
-                    <p class="menu__card__title">Foie gras de canard cuit entier</p>
-                    <div class="menu__card__infos">
-                        <p>Confiture de figue et pain toasté</p>
-                        <div>35€</div>
+                        <div class="menu__card__cont">
+                            <p class="menu__card__cont__title">Foie gras de canard cuit entier</p>
+                            <div class="menu__card__cont__infos">
+                                <p>Confiture de figue et pain toasté</p>
+                                <div>35€</div>
+
+                        </div>
                     </div>
+                    <div class="menu__card__validate">
+                            <i class="fa-solid fa-check"></i>
+                        </div>
                 </div>
             </article>
         </section>
@@ -58,25 +82,43 @@
             <article class="menu">
                 <h3>PLATS</h3>
                 <div class="menu__card">
-                    <p class="menu__card__title">Noix de coquilles Saint-Jacques</p>
-                    <div class="menu__card__infos">
-                        <p>Sur lit de purée de céleri-rave</p>
-                        <div>40€</div>
+                        <div class="menu__card__cont">
+                            <p class="menu__card__cont__title">Noix de coquilles Saint-Jacques</p>
+                            <div class="menu__card__cont__infos">
+                                <p>Sur lit de purée de céleri-rave</p>
+                                <div>40€</div>
+
+                        </div>
                     </div>
+                    <div class="menu__card__validate">
+                            <i class="fa-solid fa-check"></i>
+                        </div>
                 </div>
                 <div class="menu__card">
-                    <p class="menu__card__title">Langoustine poêlée</p>
-                    <div class="menu__card__infos">
-                        <p>Purée de patate douce</p>
-                        <div>35€</div>
+                    <div class="menu__card__cont">
+                        <p class="menu__card__cont__title">Langoustine poêlée</p>
+                        <div class="menu__card__cont__infos">
+                            <p>Purée de patate douce</p>
+                            <div>35€</div>
+                        </div>
+
                     </div>
+                    <div class="menu__card__validate">
+                            <i class="fa-solid fa-check"></i>
+                        </div>
                 </div>
                 <div class="menu__card">
-                    <p class="menu__card__title">Mijoté de queue de boeuf</p>
-                    <div class="menu__card__infos">
-                        <p>Et riz sauvage aux zests de citron</p>
-                        <div>44€</div>
+                        <div class="menu__card__cont">
+                            <p class="menu__card__cont__title">Mijoté de queue de boeuf</p>
+                            <div class="menu__card__cont__infos">
+                                <p>Et riz sauvage aux zests de citron</p>
+                                <div>44€</div>
+
+                        </div>
                     </div>
+                    <div class="menu__card__validate">
+                            <i class="fa-solid fa-check"></i>
+                        </div>
                 </div>
             </article>
         </section>
@@ -84,25 +126,43 @@
             <article class="menu">
                 <h3>DESSERTS</h3>
                 <div class="menu__card">
-                    <p class="menu__card__title">Macaron noisette et chocolat</p>
-                    <div class="menu__card__infos">
-                        <p>Glace au caramel brun et sel de Guérande</p>
-                        <div>18€</div>
+                        <div class="menu__card__cont">
+                            <p class="menu__card__cont__title">Macaron noisette et chocolat</p>
+                            <div class="menu__card__cont__infos">
+                                <p>Glace au caramel brun et sel de Guérande</p>
+                                <div>18€</div>
+
+                        </div>
                     </div>
+                    <div class="menu__card__validate">
+                            <i class="fa-solid fa-check"></i>
+                        </div>
                 </div>
                 <div class="menu__card">
-                    <p class="menu__card__title">Baba au rhum revisité</p>
-                    <div class="menu__card__infos">
-                        <p>Avec son coulis de citron</p>
-                        <div>22€</div>
+                        <div class="menu__card__cont">
+                            <p class="menu__card__cont__title">Baba au rhum revisité</p>
+                            <div class="menu__card__cont__infos">
+                                <p>Avec son coulis de citron</p>
+                                <div>22€</div>
+
+                        </div>
                     </div>
+                    <div class="menu__card__validate">
+                            <i class="fa-solid fa-check"></i>
+                        </div>
                 </div>
                 <div class="menu__card">
-                    <p class="menu__card__title">Tarte au citron meringuée</p>
-                    <div class="menu__card__infos">
-                        <p>Destructurée</p>
-                        <div>23€</div>
+                    <div class="menu__card__cont">
+                        <p class="menu__card__cont__title">Tarte au citron meringuée</p>
+                        <div class="menu__card__cont__infos">
+                            <p>Destructurée</p>
+                            <div>23€</div>
+                        </div>
+
                     </div>
+                    <div class="menu__card__validate">
+                            <i class="fa-solid fa-check"></i>
+                        </div>
                 </div>
             </article>
         </section>
