--- a/SubPages/sens.html
+++ b/SubPages/sens.html
@@ -16,7 +16,7 @@
     <a href="../index.html"><i class="fa-solid fa-arrow-left"></i></a>
 </header>
 <div class="presentation__img"></div>
-<main class="detail" >
+<main class="detail">
     <div class="detail__title">
         <h2>Le délice des sens</h2>
         <i class=" fa-regular fa-heart"></i>
@@ -25,24 +25,39 @@
         <article class="menu">
             <h3>ENTRÉES</h3>
             <div class="menu__card">
-                <p class="menu__card__title">Tartare de thon</p>
-                <div class="menu__card__infos">
-                    <p>Assaisonné au yuzu</p>
-                    <div>25€</div>
+                <div class="menu__card__cont">
+                    <p class="menu__card__cont__title">Tartare de thon</p>
+                    <div class="menu__card__cont__infos">
+                        <p>Assaisonné au yuzu</p>
+                        <div>25€</div>
+                    </div>
+                </div>
+                <div class="menu__card__validate">
+                    <i class="fa-solid fa-check"></i>
                 </div>
             </div>
             <div class="menu__card">
-                <p class="menu__card__title">Bouchée de homard croustillant</p>
-                <div class="menu__card__infos">
-                    <p>Et sa farandole de petis légumes</p>
-                    <div>35€</div>
+                <div class="menu__card__cont">
+                    <p class="menu__card__cont__title">Bouchée de homard croustillant</p>
+                    <div class="menu__card__cont__infos">
+                        <p>Et sa farandole de petis légumes</p>
+                        <div>35€</div>
+                    </div>
+                </div>
+                <div class="menu__card__validate">
+                    <i class="fa-solid fa-check"></i>
                 </div>
             </div>
             <div class="menu__card">
-                <p class="menu__card__title">Vélouté de cèpes</p>
-                <div class="menu__card__infos">
-                    <p>Aux truffes</p>
-                    <div>20€</div>
+                <div class="menu__card__cont">
+                    <p class="menu__card__cont__title">Vélouté de cèpes</p>
+                    <div class="menu__card__cont__infos">
+                        <p>Aux truffes</p>
+                        <div>20€</div>
+                    </div>
+                </div>
+                <div class="menu__card__validate">
+                    <i class="fa-solid fa-check"></i>
                 </div>
             </div>
         </article>
@@ -51,24 +66,39 @@
         <article class="menu">
             <h3>PLATS</h3>
             <div class="menu__card">
-                <p class="menu__card__title">Poulet rôti aux herbe de provence</p>
-                <div class="menu__card__infos">
-                    <p>Et sa crème de truffe</p>
-                    <div>40€</div>
+                <div class="menu__card__cont">
+                    <p class="menu__card__cont__title">Poulet rôti aux herbe de provence</p>
+                    <div class="menu__card__cont__infos">
+                        <p>Et sa crème de truffe</p>
+                        <div>40€</div>
+                    </div>
+                </div>
+                <div class="menu__card__validate">
+                    <i class="fa-solid fa-check"></i>
                 </div>
             </div>
             <div class="menu__card">
-                <p class="menu__card__title">Langouste rôtie</p>
-                <div class="menu__card__infos">
-                    <p>Et ses légumes de saison</p>
-                    <div>35€</div>
+                <div class="menu__card__cont">
+                    <p class="menu__card__cont__title">Langouste rôtie</p>
+                    <div class="menu__card__cont__infos">
+                        <p>Et ses légumes de saison</p>
+                        <div>35€</div>
+                    </div>
+                </div>
+                <div class="menu__card__validate">
+                    <i class="fa-solid fa-check"></i>
                 </div>
             </div>
             <div class="menu__card">
-                <p class="menu__card__title">Côte de boeuf angus</p>
-                <div class="menu__card__infos">
-                    <p>Et sa purée de panais</p>
-                    <div>44€</div>
+                <div class="menu__card__cont">
+                    <p class="menu__card__cont__title">Côte de boeuf angus</p>
+                    <div class="menu__card__cont__infos">
+                        <p>Et sa purée de panais</p>
+                        <div>44€</div>
+                    </div>
+                </div>
+                <div class="menu__card__validate">
+                    <i class="fa-solid fa-check"></i>
                 </div>
             </div>
         </article>
@@ -77,24 +107,39 @@
         <article class="menu">
             <h3>DESSERTS</h3>
             <div class="menu__card">
-                <p class="menu__card__title">Farandole de desserts</p>
-                <div class="menu__card__infos">
-                    <p>Du chef</p>
-                    <div>18€</div>
+                <div class="menu__card__cont">
+                    <p class="menu__card__cont__title">Farandole de desserts</p>
+                    <div class="menu__card__cont__infos">
+                        <p>Du chef</p>
+                        <div>18€</div>
+                    </div>
+                </div>
+                <div class="menu__card__validate">
+                    <i class="fa-solid fa-check"></i>
                 </div>
             </div>
             <div class="menu__card">
-                <p class="menu__card__title">Crème brulée</p>
-                <div class="menu__card__infos">
-                    <p>Revisitée</p>
-                    <div>22€</div>
+                <div class="menu__card__cont">
+                    <p class="menu__card__cont__title">Crème brulée</p>
+                    <div class="menu__card__cont__infos">
+                        <p>Revisitée</p>
+                        <div>22€</div>
+                    </div>
+                </div>
+                <div class="menu__card__validate">
+                    <i class="fa-solid fa-check"></i>
                 </div>
             </div>
             <div class="menu__card">
-                <p class="menu__card__title">Tiramisu</p>
-                <div class="menu__card__infos">
-                    <p>A la noisette</p>
-                    <div>23€</div>
+                <div class="menu__card__cont">
+                    <p class="menu__card__cont__title">Tiramisu</p>
+                    <div class="menu__card__cont__infos">
+                        <p>A la noisette</p>
+                        <div>23€</div>
+                    </div>
+                </div>
+                <div class="menu__card__validate">
+                    <i class="fa-solid fa-check"></i>
                 </div>
             </div>
         </article>
@@ -102,7 +147,7 @@
     <button class="btn ">Commander</button>
 </main>
 <footer class="footer">
-    <p class="footer__title"><a href="#title" >ohmyfood</a></p>
+    <p class="footer__title"><a href="#title">ohmyfood</a></p>
     <ul class="footer__list">
         <li class="footer__list__item"><i class="fa-solid fa-utensils"></i>Proposer un restaurant</li>
         <li class="footer__list__item"><i class="fa-solid fa-handshake-angle"></i>Devenir partenaire</li>
