--- a/SubPages/palette.html
+++ b/SubPages/palette.html
@@ -16,7 +16,7 @@
     <a href="../index.html"><i class="fa-solid fa-arrow-left"></i></a>
 </header>
 <div class="presentation__img"></div>
-<main class="detail" >
+<main class="detail">
     <div class="detail__title">
         <h2>La palette du goût</h2>
         <i class=" fa-regular fa-heart"></i>
@@ -25,24 +25,40 @@
         <article class="menu">
             <h3>ENTRÉES</h3>
             <div class="menu__card">
-                <p class="menu__card__title">Fricassée d'escargot</p>
-                <div class="menu__card__infos">
-                    <p>Au piment d'espelette</p>
-                    <div>25€</div>
+                <div class="menu__card__cont">
+                    <p class="menu__card__cont__title">Fricassée d'escargot</p>
+                    <div class="menu__card__cont__infos">
+                        <p>Au piment d'espelette</p>
+                        <div>25€</div>
+                    </div>
+                </div>
+                <div class="menu__card__validate">
+                    <i class="fa-solid fa-check"></i>
+                </div>
+            </div>
+
+            <div class="menu__card">
+                <div class="menu__card__cont">
+                    <p class="menu__card__cont__title">Foie gras de canard mi-cuit</p>
+                    <div class="menu__card__cont__infos">
+                        <p>Et ses copeaux de truffe noire</p>
+                        <div>35€</div>
+                    </div>
+                </div>
+                <div class="menu__card__validate">
+                    <i class="fa-solid fa-check"></i>
                 </div>
             </div>
             <div class="menu__card">
-                <p class="menu__card__title">Foie gras de canard mi-cuit</p>
-                <div class="menu__card__infos">
-                    <p>Et ses copeaux de truffe noire</p>
-                    <div>35€</div>
+                <div class="menu__card__cont">
+                    <p class="menu__card__cont__title">Oeuf au plat</p>
+                    <div class="menu__card__cont__infos">
+                        <p>Assaisonné à la truffe sur lit de pamplemousse</p>
+                        <div>20€</div>
+                    </div>
                 </div>
-            </div>
-            <div class="menu__card">
-                <p class="menu__card__title">Oeuf au plat</p>
-                <div class="menu__card__infos">
-                    <p>Assaisonné à la truffe sur lit de pamplemousse</p>
-                    <div>20€</div>
+                <div class="menu__card__validate">
+                    <i class="fa-solid fa-check"></i>
                 </div>
             </div>
         </article>
@@ -51,25 +67,40 @@
         <article class="menu">
             <h3>PLATS</h3>
             <div class="menu__card">
-                <p class="menu__card__title">Filet de boeuf aux herbes</p>
-                <div class="menu__card__infos">
-                    <p>Accompagné de sa ribambelle de légumes verts</p>
-                    <div>40€</div>
+                <div class="menu__card__cont">
+                    <p class="menu__card__cont__title">Filet de boeuf aux herbes</p>
+                    <div class="menu__card__cont__infos">
+                        <p>Accompagné de sa ribambelle de légumes verts</p>
+                        <div>40€</div>
+                    </div>
+                </div>
+                <div class="menu__card__validate">
+                    <i class="fa-solid fa-check"></i>
                 </div>
             </div>
             <div class="menu__card">
-                <p class="menu__card__title">Parmentier de queue de boeuf</p>
-                <div class="menu__card__infos">
-                    <p>A la truffe noire sur sa purée de panais</p>
-                    <div>35€</div>
+                <div class="menu__card__cont">
+                    <p class="menu__card__cont__title">Parmentier de queue de boeuf</p>
+                    <div class="menu__card__cont__infos">
+                        <p>A la truffe noire sur sa purée de panais</p>
+                        <div>35€</div>
+                    </div>
+                </div>
+                <div class="menu__card__validate">
+                    <i class="fa-solid fa-check"></i>
                 </div>
             </div>
             <div class="menu__card">
-                <p class="menu__card__title">Filet de Turbot</p>
-                <div class="menu__card__infos">
-                    <p>Aux agrumes</p>
-                    <div>44€</div>
+                <div class="menu__card__cont">
+                    <p class="menu__card__cont__title">Filet de Turbot</p>
+                    <div class="menu__card__cont__infos">
+                        <p>Aux agrumes</p>
+                        <div>44€</div>
+                    </div>
                 </div>
+                <div class="menu__card__validate">
+                <i class="fa-solid fa-check"></i>
+            </div>
             </div>
         </article>
     </section>
@@ -77,24 +108,39 @@
         <article class="menu">
             <h3>DESSERTS</h3>
             <div class="menu__card">
-                <p class="menu__card__title">Paris-Brest</p>
-                <div class="menu__card__infos">
-                    <p>Revisité</p>
-                    <div>18€</div>
+                <div class="menu__card__cont">
+                    <p class="menu__card__cont__title">Paris-Brest</p>
+                    <div class="menu__card__cont__infos">
+                        <p>Revisité</p>
+                        <div>18€</div>
+                    </div>
+                </div>
+                <div class="menu__card__validate">
+                    <i class="fa-solid fa-check"></i>
                 </div>
             </div>
             <div class="menu__card">
-                <p class="menu__card__title">macaron au chocolat d'exception</p>
-                <div class="menu__card__infos">
-                    <p>Et glace à la vanille de Madagascar</p>
-                    <div>22€</div>
+                <div class="menu__card__cont">
+                    <p class="menu__card__cont__title">macaron au chocolat d'exception</p>
+                    <div class="menu__card__cont__infos">
+                        <p>Et glace à la vanille de Madagascar</p>
+                        <div>22€</div>
+                    </div>
+                </div>
+                <div class="menu__card__validate">
+                    <i class="fa-solid fa-check"></i>
                 </div>
             </div>
             <div class="menu__card">
-                <p class="menu__card__title">Mousse au chocolat</p>
-                <div class="menu__card__infos">
-                    <p>Au piment d'espelette et à la truffe noire</p>
-                    <div>23€</div>
+                <div class="menu__card__cont">
+                    <p class="menu__card__cont__title">Mousse au chocolat</p>
+                    <div class="menu__card__cont__infos">
+                        <p>Au piment d'espelette et à la truffe noire</p>
+                        <div>23€</div>
+                    </div>
+                </div>
+                <div class="menu__card__validate">
+                    <i class="fa-solid fa-check"></i>
                 </div>
             </div>
         </article>
@@ -102,7 +148,7 @@
     <button class="btn ">Commander</button>
 </main>
 <footer class="footer">
-    <p class="footer__title"><a href="#title" >ohmyfood</a></p>
+    <p class="footer__title"><a href="#title">ohmyfood</a></p>
     <ul class="footer__list">
         <li class="footer__list__item"><i class="fa-solid fa-utensils"></i>Proposer un restaurant</li>
         <li class="footer__list__item"><i class="fa-solid fa-handshake-angle"></i>Devenir partenaire</li>
