Add shade-in animation in french

--- a/SubPages/french.html
+++ b/SubPages/french.html
@@ -24,7 +24,7 @@
     <section class="content--padding--soft">
         <article class="menu">
             <h3>ENTRÉES</h3>
-            <div class="menu__card">
+            <div class="menu__card menu__card--1">
                 <div class="menu__card__cont">
                     <p class="menu__card__cont__title">Tartare de poulpe acidulé</p>
                     <div class="menu__card__cont__infos">
@@ -36,7 +36,7 @@
                     <i class="fa-solid fa-check"></i>
                 </div>
             </div>
-            <div class="menu__card">
+            <div class="menu__card menu__card--2">
                 <div class="menu__card__cont">
                     <p class="menu__card__cont__title">Velouté de légumes d'antan</p>
                     <div class="menu__card__cont__infos">
@@ -48,7 +48,7 @@
                     <i class="fa-solid fa-check"></i>
                 </div>
             </div>
-            <div class="menu__card">
+            <div class="menu__card menu__card--3">
                 <div class="menu__card__cont">
                     <p class="menu__card__cont__title">Soupe à l'oignon</p>
                     <div class="menu__card__cont__infos">
@@ -65,7 +65,7 @@
     <section class="content--padding--soft background--color">
         <article class="menu">
             <h3>PLATS</h3>
-            <div class="menu__card">
+            <div class="menu__card menu__card--4">
                 <div class="menu__card__cont">
                     <p class="menu__card__cont__title">Coquilles Saint-Jacques</p>
                     <div class="menu__card__cont__infos">
@@ -77,7 +77,7 @@
                     <i class="fa-solid fa-check"></i>
                 </div>
             </div>
-            <div class="menu__card">
+            <div class="menu__card menu__card--5">
                 <div class="menu__card__cont">
                     <p class="menu__card__cont__title">Magret de canard</p>
                     <div class="menu__card__cont__infos">
@@ -89,7 +89,7 @@
                     <i class="fa-solid fa-check"></i>
                 </div>
             </div>
-            <div class="menu__card">
+            <div class="menu__card menu__card--6">
                 <div class="menu__card__cont">
                     <p class="menu__card__cont__title">Pigeonneau d'Ille-et-Villaine</p>
                     <div class="menu__card__cont__infos">
@@ -106,7 +106,7 @@
     <section class="content--padding--soft background--color">
         <article class="menu">
             <h3>DESSERTS</h3>
-            <div class="menu__card">
+            <div class="menu__card menu__card--7">
                 <div class="menu__card__cont">
                     <p class="menu__card__cont__title">Pétales de violletes glacés</p>
                     <div class="menu__card__cont__infos">
@@ -118,7 +118,7 @@
                     <i class="fa-solid fa-check"></i>
                 </div>
             </div>
-            <div class="menu__card">
+            <div class="menu__card menu__card--8">
                 <div class="menu__card__cont">
                     <p class="menu__card__cont__title">Fondant au chocolat</p>
                     <div class="menu__card__cont__infos">
@@ -130,7 +130,7 @@
                     <i class="fa-solid fa-check"></i>
                 </div>
             </div>
-            <div class="menu__card">
+            <div class="menu__card menu__card--9">
                 <div class="menu__card__cont">
                     <p class="menu__card__cont__title">Millefeuille croustillant</p>
                     <div class="menu__card__cont__infos">
