Add class for shade-in animation in all subpages

--- a/SubPages/palette.html
+++ b/SubPages/palette.html
@@ -24,7 +24,7 @@
     <section class="content--padding--soft">
         <article class="menu">
             <h3>ENTRÉES</h3>
-            <div class="menu__card">
+            <div class="menu__card menu__card--1">
                 <div class="menu__card__cont">
                     <p class="menu__card__cont__title">Fricassée d'escargot</p>
                     <div class="menu__card__cont__infos">
@@ -37,7 +37,7 @@
                 </div>
             </div>
 
-            <div class="menu__card">
+            <div class="menu__card menu__card--2">
                 <div class="menu__card__cont">
                     <p class="menu__card__cont__title">Foie gras de canard mi-cuit</p>
                     <div class="menu__card__cont__infos">
@@ -49,7 +49,7 @@
                     <i class="fa-solid fa-check"></i>
                 </div>
             </div>
-            <div class="menu__card">
+            <div class="menu__card menu__card--3">
                 <div class="menu__card__cont">
                     <p class="menu__card__cont__title">Oeuf au plat</p>
                     <div class="menu__card__cont__infos">
@@ -66,7 +66,7 @@
     <section class="content--padding--soft background--color">
         <article class="menu">
             <h3>PLATS</h3>
-            <div class="menu__card">
+            <div class="menu__card menu__card--4">
                 <div class="menu__card__cont">
                     <p class="menu__card__cont__title">Filet de boeuf aux herbes</p>
                     <div class="menu__card__cont__infos">
@@ -78,7 +78,7 @@
                     <i class="fa-solid fa-check"></i>
                 </div>
             </div>
-            <div class="menu__card">
+            <div class="menu__card menu__card--5">
                 <div class="menu__card__cont">
                     <p class="menu__card__cont__title">Parmentier de queue de boeuf</p>
                     <div class="menu__card__cont__infos">
@@ -90,7 +90,7 @@
                     <i class="fa-solid fa-check"></i>
                 </div>
             </div>
-            <div class="menu__card">
+            <div class="menu__card menu__card--6">
                 <div class="menu__card__cont">
                     <p class="menu__card__cont__title">Filet de Turbot</p>
                     <div class="menu__card__cont__infos">
@@ -107,7 +107,7 @@
     <section class="content--padding--soft background--color">
         <article class="menu">
             <h3>DESSERTS</h3>
-            <div class="menu__card">
+            <div class="menu__card menu__card--7">
                 <div class="menu__card__cont">
                     <p class="menu__card__cont__title">Paris-Brest</p>
                     <div class="menu__card__cont__infos">
@@ -119,8 +119,8 @@
                     <i class="fa-solid fa-check"></i>
                 </div>
             </div>
-            <div class="menu__card">
-                <div class="menu__card__cont">
+            <div class="menu__card menu__card--8">
+                <div class="menu__card__cont ">
                     <p class="menu__card__cont__title">macaron au chocolat d'exception</p>
                     <div class="menu__card__cont__infos">
                         <p>Et glace à la vanille de Madagascar</p>
@@ -131,7 +131,7 @@
                     <i class="fa-solid fa-check"></i>
                 </div>
             </div>
-            <div class="menu__card">
+            <div class="menu__card menu__card--9">
                 <div class="menu__card__cont">
                     <p class="menu__card__cont__title">Mousse au chocolat</p>
                     <div class="menu__card__cont__infos">
