--- a/SubPages/note.html
+++ b/SubPages/note.html
@@ -24,7 +24,7 @@
         <section class="content--padding--soft">
             <article class="menu">
                 <h3>ENTRÉES</h3>
-                <div class="menu__card">
+                <div class="menu__card menu__card--1">
                         <div class="menu__card__cont">
                             <p class="menu__card__cont__title">Ravioles de foie gras</p>
                             <div class="menu__card__cont__infos">
@@ -37,7 +37,7 @@
                             <i class="fa-solid fa-check"></i>
                         </div>
                 </div>
-                <div class="menu__card">
+                <div class="menu__card  menu__card--2">
                         <div class="menu__card__cont">
                             <p class="menu__card__cont__title">Caviar osciètre</p>
                             <div class="menu__card__cont__infos">
@@ -50,7 +50,7 @@
                             <i class="fa-solid fa-check"></i>
                         </div>
                 </div>
-                <div class="menu__card">
+                <div class="menu__card  menu__card--3">
                         <div class="menu__card__cont">
                             <p class="menu__card__cont__title">Homard et espuma de comté</p>
                             <div class="menu__card__cont__infos">
@@ -63,7 +63,7 @@
                             <i class="fa-solid fa-check"></i>
                         </div>
                 </div>
-                <div class="menu__card">
+                <div class="menu__card  menu__card--4">
                         <div class="menu__card__cont">
                             <p class="menu__card__cont__title">Foie gras de canard cuit entier</p>
                             <div class="menu__card__cont__infos">
@@ -81,7 +81,7 @@
         <section class="content--padding--soft background--color">
             <article class="menu">
                 <h3>PLATS</h3>
-                <div class="menu__card">
+                <div class="menu__card  menu__card--5">
                         <div class="menu__card__cont">
                             <p class="menu__card__cont__title">Noix de coquilles Saint-Jacques</p>
                             <div class="menu__card__cont__infos">
@@ -94,7 +94,7 @@
                             <i class="fa-solid fa-check"></i>
                         </div>
                 </div>
-                <div class="menu__card">
+                <div class="menu__card  menu__card--6">
                     <div class="menu__card__cont">
                         <p class="menu__card__cont__title">Langoustine poêlée</p>
                         <div class="menu__card__cont__infos">
@@ -107,7 +107,7 @@
                             <i class="fa-solid fa-check"></i>
                         </div>
                 </div>
-                <div class="menu__card">
+                <div class="menu__card  menu__card--7">
                         <div class="menu__card__cont">
                             <p class="menu__card__cont__title">Mijoté de queue de boeuf</p>
                             <div class="menu__card__cont__infos">
@@ -125,7 +125,7 @@
         <section class="content--padding--soft background--color">
             <article class="menu">
                 <h3>DESSERTS</h3>
-                <div class="menu__card">
+                <div class="menu__card  menu__card--8">
                         <div class="menu__card__cont">
                             <p class="menu__card__cont__title">Macaron noisette et chocolat</p>
                             <div class="menu__card__cont__infos">
@@ -138,8 +138,8 @@
                             <i class="fa-solid fa-check"></i>
                         </div>
                 </div>
-                <div class="menu__card">
-                        <div class="menu__card__cont">
+                <div class="menu__card menu__card--9">
+                        <div class="menu__card__cont  ">
                             <p class="menu__card__cont__title">Baba au rhum revisité</p>
                             <div class="menu__card__cont__infos">
                                 <p>Avec son coulis de citron</p>
@@ -151,7 +151,7 @@
                             <i class="fa-solid fa-check"></i>
                         </div>
                 </div>
-                <div class="menu__card">
+                <div class="menu__card  menu__card--10">
                     <div class="menu__card__cont">
                         <p class="menu__card__cont__title">Tarte au citron meringuée</p>
                         <div class="menu__card__cont__infos">
