Add heart animate in each html

--- a/SubPages/french.html
+++ b/SubPages/french.html
@@ -19,7 +19,9 @@
 <main class="detail">
     <div class="detail__title">
         <h2>À la française</h2>
-        <i class=" fa-regular fa-heart"></i>
+        <i class="fa-regular fa-heart">
+            <i class="fa-solid fa-heart "></i>
+        </i>
     </div>
     <section class="content--padding--soft">
         <article class="menu">
