Add animation on loading

--- a/index.html
+++ b/index.html
@@ -14,7 +14,16 @@
     <header class="header">
         <h1 id="title">ohmyfood</h1>
     </header>
-    <main>
+    <div class="loading">
+        <div class="loading__bar loading__bar--1"></div>
+        <div class="loading__bar loading__bar--2"></div>
+        <div class="loading__bar loading__bar--3"></div>
+        <div class="loading__bar loading__bar--4"></div>
+        <div class="loading__bar loading__bar--5"></div>
+        <div class="loading__bar loading__bar--6"></div>
+
+    </div>
+    <main class="main">
         <div class="location"><i class="fa-solid fa-location-dot"></i> <p>Paris, Belleville </p></div>
         <section class="description">
             <h2>Réservez le menu qui vous convient</h2>
